# wheel-of-fortune

./: .gitignore  README.md  docker-compose-production.yml  docker-compose.yml  start.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: cache.rs  main.rs
backend/src/adapters/: json_adapter.rs  mod.rs  web_api_adapter.rs  yahoo_finance.rs
backend/src/llm/: prompt.md  prompt.rs  user.md
backend/src/models/: analyst.rs  chart.rs  earnings.rs  financials.rs  mod.rs  options.rs  rules.md  screener.rs  stock.rs
backend/src/routes/: analyst.rs  batch.rs  chart.rs  common.rs  discovery.rs  earnings.rs  financials.rs  inventory.rs  iv_signals.rs  market_data.rs  mod.rs  news.rs  options.rs  prices.rs  recommendations.rs  screener.rs  search.rs  technicals.rs
backend/src/strategy/: ema_pullback.rs  iv_signal.rs  mod.rs  wheel.rs
data/mock/: AAPL.json  MSFT.json  TSLA.json
frontend/: .dockerignore  Dockerfile  next.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CloseContractModal.tsx  Discovery.tsx  DiscoveryTab.tsx  HealthPopupContext.tsx  InventoryForm.tsx  IvSignalPanel.tsx  LlmAnalysis.tsx  MyContractsTab.tsx  MyPositionsTab.tsx  NotificationContext.tsx  OptionsTab.tsx  RecommendationCard.tsx  Recommendations.tsx  RecommendationsTable.tsx  Screener.tsx  StockNews.tsx  TechnicalsPanel.tsx  TickerLink.tsx  TickerSelector.tsx  TradeDetailModal.tsx  WheelAdvisor.tsx
frontend/lib/: api.ts  format.ts  hooks.ts  types.ts  (+1 more)
nginx/: nginx.conf
(+14 files in other folders)
